docs(setting-json): :sparkles: new scope setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "Modules",
         "setting-json",
-        "CodeLab"
+        "CodeLab",
+        "Demo"
     ]
 }
